# simple_realsense_ros

./: .gitignore  CMakeLists.txt  README.cmd
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/simple_realsense_ros/include/simple_realsense_ros/: viewer.h
install/simple_realsense_ros/lib/simple_realsense_ros/: realsense_viewer
install/simple_realsense_ros/share/ament_index/resource_index/package_run_dependencies/: simple_realsense_ros
install/simple_realsense_ros/share/simple_realsense_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: depth_subscriber.cpp  main.cpp  viewer.cpp
